# woxel

./: .clangd  .gitignore  CMakeLists.txt  Justfile  README.md  compile_flags.txt  flake.nix  main.cpp
src/gui/: MainWindow.cpp  MainWindow.h
src/main/: main.cpp
